spacing fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
+@import url(https://fonts.adobe.com/fonts/inter-variable);
 @import "tailwindcss";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
 
 :root {
+  --font-family-inter:
+    "Inter Variable" "SF Pro Display", -apple-system, BlinkMacSystem;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -117,4 +120,7 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+body {
+  font-family: var(--font-family-inter);
 }
